# apyr

./: .gitignore  .pydocstyle  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yaml  endpoints.yaml  pyproject.toml
.github/workflows/: test.yml  tests.yml
apyr/: dependencies.py  exceptions.py  function_handler.py  functions.py  main.py  models.py  utils.py
apyr/routers/: apyr_endpoints.py  endpoints.py
assets/: help.html
src/: dependencies.py  main.py  models.py  routers.py
tests/: test_functions.py
tests/data/: string1.txt  string2.txt
tests/integration/: conftest.py  test_endpoints.py
tests/unit/: test_utils.py  test_validators.py
