[tool.poetry]
name = "apyr"
version = "0.1.0"
description = "Mock that API"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/umutseven92/apyr"
repository = "https://github.com/umutseven92/apyr"
keywords = ["api", "mock", "fastapi"]
authors = ["Umut Seven <umutseven92@gmail.com>"]
maintainers = ["Umut Seven <umutseven92@gmail.com>"]
documentation = "https://github.com/umutseven92/apyr/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = { extras = ["standard"], version = "^0.13.3" }
names = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/umutseven92/apyr/issues"

[tool.poetry.scripts]
apyr = "apyr.main:run"